--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,31 @@
+astroid==2.15.1
 async-generator==1.10
 attrs==22.2.0
 certifi==2022.12.7
+dill==0.3.6
 exceptiongroup==1.1.1
+Faker==18.3.2
 h11==0.14.0
 idna==3.4
 iniconfig==2.0.0
+isort==5.12.0
+lazy-object-proxy==1.9.0
+mccabe==0.7.0
 outcome==1.2.0
 packaging==23.0
+platformdirs==3.2.0
 pluggy==1.0.0
+pylint==2.17.1
 PySocks==1.7.1
 pytest==7.2.2
+python-dateutil==2.8.2
 selenium==4.8.3
+six==1.16.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
+tomlkit==0.11.7
 trio==0.22.0
 trio-websocket==0.10.2
 urllib3==1.26.15
+wrapt==1.15.0
 wsproto==1.2.0
